tests/snapshots/diagnostics/snapshots/snapshot_diagnostics__snapshots__diagnostics__snapshot_0058_return_mismatch_dual_span_full_rendered.snap
---
source: tests/snapshots/diagnostics/mod.rs
expression: output
---
error[E300]: Return Type Mismatch

The body of `bad` does not match its declared return type.

  examples/type_system/failing/108_fun_return_string_vs_int.flx:51:5
   |
50 | fn bad() -> Int {
   |             --- `bad` was declared to return `Int`
51 |     "oops"
   |     ^^^^^^
   |     ------ this expression has type `String`

Note:
  declared return type: Int
  body type: String

Help:
  Return a `Int` value from `bad` or change its annotation.
